[package]
name = "bevissimo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
benimator = { path = "../benimator" }
bevy = "0.8.1"
bevy_ggrs = { path = "../bevy_ggrs" }
bevy_rapier2d = { version = "0.16.2", features = ["simd-stable", "debug-render"] }
clap = { version = "3.2.20", features = ["derive"] }
derive = "1.0.0"
features = "0.10.0"
getset = "0.1.2"
ggrs = { path = "../ggrs" }
rand = "0.8.5"
serde = { version = "1.0.144", features = ["derive"] }
uuid = "1.1.2"
# matchbox_socket = { path = "../matchbox/matchbox_socket", features = ["ggrs-socket"] }
webrtc_socket = { path = "../bevy_netcode/webrtc_socket" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.wasm]
inherits = "release"
opt-level = 'z'
lto = "thin"
